[tool.poetry]
name = "linnapi"
version = "0.0.1"
description = "Linnworks API integration"
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"
readme = "README.rst"

[tool.coverage.run]
branch = true
omit = ["tests/*",]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = ">=21.10b0"
flake8 = ">=4.0.1"
flake8-docstrings = ">=1.6.0"
isort = ">=5.10.0"
mypy = ">=0.910"
pytest = ">=6.2.5"
pytest-cov = ">=3.0.0"
coveralls = ">=3.3.0"
Sphinx = ">=4.2.0"
sphinx-rtd-theme = ">=1.0.0"
changelog-cli = ">=0.7.1"
bump2version = ">=1.0.1"
flake8-pyi = ">=20.10.0"
types-toml = "^0.10.4"
types-requests = "^2.27.16"
requests-mock = "^1.9.3"
types-pytz = "^2021.3.6"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
