[tool.poetry]
name = "linnapi"
version = "0.0.6"
description = "Linnworks API integration"
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"
readme = "README.rst"

[tool.coverage.run]
branch = true
omit = ["tests/*",]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
toml = "^0.10.2"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]
black = ">=21.10b0"
flake8 = ">=4.0.1"
flake8-docstrings = ">=1.6.0"
isort = ">=5.10.0"
mypy = ">=0.910"
pytest = ">=6.2.5"
pytest-cov = ">=3.0.0"
coveralls = ">=3.3.0"
Sphinx = ">=4.2.0"
sphinx-rtd-theme = ">=1.0.0"
changelog-cli = ">=0.7.1"
bump2version = ">=1.0.1"
flake8-pyi = ">=22.8.0"
types-toml = "^0.10.8"
types-requests = "^2.31.0"
requests-mock = "^1.11.0"
types-pytz = "^2023.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
